--- a/_bmad/bmm/config.yaml
+++ b/_bmad/bmm/config.yaml
@@ -7,6 +7,7 @@ project_name: TravelBlogs
 user_skill_level: intermediate
 planning_artifacts: "{project-root}/_bmad-output/project-planning-artifacts"
 implementation_artifacts: "{project-root}/_bmad-output/implementation-artifacts"
+sprint_artifacts: "{project-root}/_bmad-output/implementation-artifacts"
 project_knowledge: "{project-root}/docs"
 
 # Core Configuration Values
