--- a/travelblogs/package.json
+++ b/travelblogs/package.json
@@ -20,6 +20,7 @@
     "zod": "4.2.1"
   },
   "devDependencies": {
+    "@testing-library/react": "^16.3.0",
     "@babel/core": "^7.28.5",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
