--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -54,7 +54,7 @@ development_status:
   epic-1-retrospective: optional
 
   epic-2: in-progress
-  2-1-add-blog-entry: ready-for-dev
+  2-1-add-blog-entry: done
   2-2-edit-blog-entry: backlog
   2-3-multi-file-media-upload: backlog
   2-4-delete-blog-entry: backlog
