--- a/travelblogs/package.json
+++ b/travelblogs/package.json
@@ -20,14 +20,16 @@
     "zod": "4.2.1"
   },
   "devDependencies": {
-    "@testing-library/react": "^16.3.0",
     "@babel/core": "^7.28.5",
     "@tailwindcss/postcss": "^4",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.1.0",
+    "jsdom": "^27.4.0",
     "prisma": "7.2.0",
     "tailwindcss": "^4",
     "typescript": "^5",
