--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -1,4 +1,4 @@
-# generated: 2025-12-28T13:08:59Z
+# generated: 2025-12-28T17:02:44Z
 # project: TravelBlogs
 # project_key: travelblogs
 # tracking_system: file-system
@@ -33,7 +33,7 @@
 # - SM typically creates next story after previous one is 'done' to incorporate learnings
 # - Dev moves story to 'review', then runs code-review (fresh context, different LLM recommended)
 
-generated: 2025-12-28T13:08:59Z
+generated: 2025-12-28T17:02:44Z
 project: TravelBlogs
 project_key: travelblogs
 tracking_system: file-system
@@ -59,7 +59,9 @@ development_status:
   2-3-multi-file-media-upload: done
   2-4-delete-blog-entry: done
   2-5-entry-title: done
-  2-6-unified-entry-image-library: ready-for-dev
+  2-6-unified-entry-image-library: done
+  2-7-full-screen-photo-viewer: ready-for-dev
+  2-8-media-slideshow-viewer: ready-for-dev
   epic-2-retrospective: optional
 
   epic-3: in-progress
