--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -60,8 +60,8 @@ development_status:
   2-4-delete-blog-entry: done
   2-5-entry-title: done
   2-6-unified-entry-image-library: done
-  2-7-full-screen-photo-viewer: ready-for-dev
-  2-8-media-slideshow-viewer: ready-for-dev
+  2-7-full-screen-photo-viewer: done
+  2-8-media-slideshow-viewer: done
   epic-2-retrospective: optional
 
   epic-3: in-progress
