--- a/travelblogs/package.json
+++ b/travelblogs/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@prisma/adapter-better-sqlite3": "7.2.0",
     "@prisma/client": "7.2.0",
+    "bcryptjs": "^3.0.3",
     "better-sqlite3": "11.6.0",
     "next": "16.1.0",
     "next-auth": "^4.24.13",
