--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -82,7 +82,7 @@ development_status:
 
   epic-5: in-progress
   5-1-admin-creates-user-accounts: done
-  5-2-user-sign-in: backlog
+  5-2-user-sign-in: done
   5-3-admin-changes-user-role: backlog
   5-4-invite-viewers-to-a-trip: backlog
   5-5-enable-contributor-access-for-a-viewer: backlog
