--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -84,11 +84,12 @@ development_status:
   5-1-admin-creates-user-accounts: done
   5-2-user-sign-in: done
   5-3-admin-changes-user-role: done
-  5-4-invite-viewers-to-a-trip: backlog
+  5-4-invite-viewers-to-a-trip: done
   5-5-enable-contributor-access-for-a-viewer: backlog
   5-6-viewer-access-to-invited-trips: backlog
   5-7-contributor-adds-and-edits-entries: backlog
   5-8-admin-deactivates-user: backlog
+  5-9-administrator-role-and-admin-safeguards: backlog
   epic-5-retrospective: optional
 
   epic-6: backlog
