Story 5.6 Viewer access to invited trips

--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -86,11 +86,13 @@ development_status:
   5-3-admin-changes-user-role: done
   5-4-invite-viewers-to-a-trip: done
   5-5-enable-contributor-access-for-a-viewer: done
-  5-6-viewer-access-to-invited-trips: backlog
-  5-7-contributor-adds-and-edits-entries: backlog
+  5-6-viewer-access-to-invited-trips: done
+  5-7-contributor-adds-and-edits-entries: ready-for-dev
   5-8-admin-deactivates-user: backlog
   5-9-administrator-role-and-admin-safeguards: backlog
   5-10-refine-viewer-invitations-with-custom-selector: done
+  5-11-change-password: ready-for-dev
+  5-12-shared-view-button: ready-for-dev
   epic-5-retrospective: optional
 
   epic-6: backlog
