Story 5.9 Administrator role added

--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -89,7 +89,7 @@ development_status:
   5-6-viewer-access-to-invited-trips: done
   5-7-contributor-adds-and-edits-entries: done
   5-8-admin-deactivates-user: done
-  5-9-administrator-role-and-admin-safeguards: ready-for-dev
+  5-9-administrator-role-and-admin-safeguards: done
   5-10-refine-viewer-invitations-with-custom-selector: done
   5-11-change-password: done
   5-12-shared-view-button: done
