--- a/travelblogs/.env.example
+++ b/travelblogs/.env.example
@@ -4,3 +4,6 @@ CREATOR_PASSWORD=
 NEXTAUTH_SECRET=
 NEXTAUTH_URL=http://localhost:3000
 DATABASE_URL="file:./prisma/dev.db"
+TLS_CERT_PATH=
+TLS_KEY_PATH=
+TLS_CA_PATH=
