--- a/travelblogs/package.json
+++ b/travelblogs/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "start:https": "NODE_ENV=production node server.js",
     "lint": "eslint",
     "test": "vitest run"
   },
