--- a/travelblogs/package.json
+++ b/travelblogs/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "NODE_ENV=production node server.js",
     "start:https": "NODE_ENV=production node server.js",
     "lint": "eslint",
     "test": "vitest run"
@@ -15,6 +15,7 @@
     "@prisma/client": "7.2.0",
     "bcryptjs": "^3.0.3",
     "better-sqlite3": "11.6.0",
+    "dotenv": "^16.6.1",
     "next": "16.1.0",
     "next-auth": "^4.24.13",
     "react": "19.2.3",
