--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -72,6 +72,7 @@ development_status:
   3-2-entry-navigation: done
   3-3-trip-overview-with-latest-entries: done
   3-4-fullscreen-viewer-minimal-chrome-and-segmented-progress: done
+  3-5-transfer-trip-ownership: done
   epic-3-retrospective: optional
 
   epic-4: in-progress
@@ -97,7 +98,7 @@ development_status:
   5-12-shared-view-button: done
   5-13-active-badge-date-range: done
   5-14-relative_redirects: done
-  5-15-shared-view-hero-image: ready-for-dev
+  5-15-shared-view-hero-image: review
   5-16-missing-migration-must-change-password: ready-for-dev
   5-17-shared-view-back-to-overview: ready-for-dev
   5-18-manage-trips-view-edit-gating: ready-for-dev
