Story 5.15 Shared view hero image

--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -98,7 +98,7 @@ development_status:
   5-12-shared-view-button: done
   5-13-active-badge-date-range: done
   5-14-relative_redirects: done
-  5-15-shared-view-hero-image: review
+  5-15-shared-view-hero-image: done
   5-16-missing-migration-must-change-password: ready-for-dev
   5-17-shared-view-back-to-overview: ready-for-dev
   5-18-manage-trips-view-edit-gating: ready-for-dev
