Update story 5-20 status to done after code review

--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -102,7 +102,7 @@ development_status:
   5-17-shared-view-back-to-overview: done
   5-18-manage-trips-view-edit-gating: done
   5-19-fix-edit-navigation: done
-  5-20-back-to-trips-navigation: review
+  5-20-back-to-trips-navigation: done
   epic-5-retrospective: optional
 
   epic-6: in-progress
