--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -110,5 +110,5 @@ development_status:
   6-2-trip-timeline-view: backlog
   6-3-extract-coordinates-from-photo-metadata: backlog
   6-4-user-manual: done
-  6-5-language-selection: ready-for-dev
+  6-5-language-selection: done
   epic-6-retrospective: optional
