Story 7.2 Extract coordinates from images

--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -114,7 +114,7 @@ development_status:
 
   epic-7: in-progress
   7-1-trip-map-view: done
-  7-2-extract-coordinates-from-photo-metadata: review
+  7-2-extract-coordinates-from-photo-metadata: done
   7-3-map-on-edit-trip: ready-for-dev
   7-4-story-location-selector: ready-for-dev
   epic-7-retrospective: optional
