Story 7.5 Map view in hero image

--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -117,4 +117,5 @@ development_status:
   7-2-extract-coordinates-from-photo-metadata: done
   7-3-map-on-edit-trip: done
   7-4-story-location-selector: done
+  7-5-map-view-in-shared-hero-image: done
   epic-7-retrospective: optional
