Story 7.6 Entry Location section

--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -118,4 +118,5 @@ development_status:
   7-3-map-on-edit-trip: done
   7-4-story-location-selector: done
   7-5-map-view-in-shared-hero-image: done
+  7-6-entry-location-section: done
   epic-7-retrospective: optional
