--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -119,4 +119,6 @@ development_status:
   7-4-story-location-selector: done
   7-5-map-view-in-shared-hero-image: done
   7-6-entry-location-section: done
+  7-7-fullscreen-trip-map: done
+  7-8-edit-entry-location-display: ready-for-dev
   epic-7-retrospective: optional
