--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -128,4 +128,5 @@ development_status:
   8-2-show-tags-on-trip-overview-entry-cards: done
   8-3-show-tags-on-entry-reader-hero: done
   8-4-filter-entries-by-tags: done
+  8-5-trip-cards: done
   epic-8-retrospective: optional
