--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -140,7 +140,7 @@ development_status:
   9-6-implement-custom-image-node-with-entrymediaid: done
   9-7-update-gallery-insert-to-use-custom-image-nodes: done
   9-8-update-entry-viewer-to-render-tiptap-json: done
-  9-9-implement-plain-text-to-tiptap-converter: backlog
+  9-9-implement-plain-text-to-tiptap-converter: done
   9-10-add-lazy-migration-logic-convert-on-edit: backlog
   9-11-update-gallery-delete-to-remove-image-nodes: backlog
   9-12-add-format-detection-and-migration-status: backlog
