Story 9.11 Update Gallery Delete

--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -142,7 +142,7 @@ development_status:
   9-8-update-entry-viewer-to-render-tiptap-json: done
   9-9-implement-plain-text-to-tiptap-converter: done
   9-10-add-lazy-migration-logic-convert-on-edit: done
-  9-11-update-gallery-delete-to-remove-image-nodes: backlog
+  9-11-update-gallery-delete-to-remove-image-nodes: done
   9-12-add-format-detection-and-migration-status: backlog
   9-13-test-rich-text-features-end-to-end: backlog
   epic-9-retrospective: optional
