--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -144,5 +144,5 @@ development_status:
   9-10-add-lazy-migration-logic-convert-on-edit: done
   9-11-update-gallery-delete-to-remove-image-nodes: done
   9-12-add-format-detection-and-migration-status: done
-  9-13-test-rich-text-features-end-to-end: backlog
+  9-13-test-rich-text-features-end-to-end: review
   epic-9-retrospective: optional
