Story 10.2 Image compression

--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -149,4 +149,5 @@ development_status:
 
   epic-10: in-progress
   10-1-enhanced-media-support-photos-videos: done
+  10-2-automatic-image-compression: done
   epic-10-retrospective: optional
