Story 10.3 Crossfade in slideshow

--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -150,4 +150,5 @@ development_status:
   epic-10: in-progress
   10-1-enhanced-media-support-photos-videos: done
   10-2-automatic-image-compression: done
+  10-3-slideshow-crossfade-transitions: done
   epic-10-retrospective: optional
