--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -175,6 +175,6 @@ development_status:
   13-4-migrate-middleware-to-proxy: done
   13-5-improve-entry-card-hover-interactions: done
   13-6-preload-slideshow-images-for-smooth-playback: done
-  13-7-improve-trip-card-hover-interactions: ready-for-dev
+  13-7-improve-trip-card-hover-interactions: done
   13-8-simplify-share-link-ui-layout: ready-for-dev
   epic-13-retrospective: optional
