Story 14.1 render trips world map

--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -179,8 +179,8 @@ development_status:
   13-8-simplify-share-link-ui-layout: done
   epic-13-retrospective: optional
 
-  epic-14: backlog
-  14-1-render-trips-page-world-map: backlog
+  epic-14: in-progress
+  14-1-render-trips-page-world-map: done
   14-2-highlight-countries-with-visible-trips: backlog
   14-3-show-trip-list-on-country-hover: backlog
   14-4-navigate-to-trip-from-map-popup: backlog
