--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -187,4 +187,5 @@ development_status:
   14-5-enforce-access-control-in-map-visibility: done
   14-6-gradient-country-highlights: done
   14-7-enable-map-zoom-and-pan: done
+  14-8-heic-upload-support: done
   epic-14-retrospective: optional
