--- a/travelblogs/package.json
+++ b/travelblogs/package.json
@@ -28,9 +28,11 @@
     "leaflet": "^1.9.4",
     "next": "16.1.0",
     "next-auth": "^4.24.13",
+    "node-stream-zip": "^1.15.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-leaflet": "^5.0.0",
+    "zip-stream": "^7.0.2",
     "zod": "4.2.1"
   },
   "devDependencies": {
